k8s/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubernetes.docker.internal
      secretName: tls-secret
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
          - path: /file
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
          - path: /subscription
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 7000
